--- a/index.html
+++ b/index.html
@@ -1,47 +1,137 @@
-<p align="center">
-    <img src="https://capsule-render.vercel.app/api?text=Hey Everyone!🕹️&animation=fadeIn&type=waving&color=gradient&height=100"/>
-  </p>
-  <h1>👋, I am Usman Ali </h1>
-  <h2> 🚀 &nbsp;Let's Connect</h2>
-  <p align="middle">
-    <a href="https://www.linkedin.com/in/usmanali07/">
-      <img height="50" src="https://www.freepnglogos.com/uploads/linkedin-in-logo-png-1.png" alt="LinkedIn logo" align="middle">
-    </a>
-    <a href="https://twitter.com/Usmanali07_">
-      <img height="50" src="https://www.freepnglogos.com/uploads/twitter-logo-png/twitter-logo-vector-png-clipart-1.png" align="middle">
-    </a>
-    <a href="https://www.instagram.com/usmanali07_/">
-      <img height="50" src="https://user-images.githubusercontent.com/46517096/166974368-9798f39f-1f46-499c-b14e-81f0a3f83a06.png" align="middle">
-    </a>
-  </p>
-  
-  <h3> 🚀 About Me</h3>
-  <ul>
-    <li>🔭 I’m currently working as a Python Developer <img src="https://media.giphy.com/media/M9gbBd9nbDrOTu1Mqx/giphy.gif" width="100"/></li>
-    <li>🌱 I’m currently learning Machine Learning / Deep Learning</li>
-    <li>👯 I’m looking to collaborate on different projects, especially on Machine Learning</li>
-    <li>🤔 I’m looking for help with the latest Machine Learning Models</li>
-    <li>💬 Ask me about Machine Learning / Data Science / and more</li>
-    <li>📫 How to reach me: usmanalipgc@gmail.com</li>
-    <li>😄 Pronouns: He/Him</li>
-    <li>⚡ Fun fact: Dreaming Big, Getting stuff done, and knowing how to have fun</li>
-  </ul>
-  
-  <h2> 🚀 &nbsp;Some Tools I Have Used and Learned</h2>
-  <p align="middle">
-    <div>
-      <img src="https://cdn3.iconfinder.com/data/icons/logos-and-brands-adobe/512/267_Python-512.png" alt="Python" width="45" height="45"/>
-      <img src="https://github.com/devicons/devicon/blob/master/icons/numpy/numpy-original.svg" title="Numpy" alt="Numpy" width="40" height="40"/>&nbsp;
-      <img src="https://github.com/devicons/devicon/blob/master/icons/pandas/pandas-original.svg" title="Pandas" alt="Pandas" width="40" height="40"/>&nbsp;
-      <img src="https://github.com/devicons/devicon/blob/master/icons/anaconda/anaconda-original.svg" title="Anaconda" alt="Anaconda" width="40" height="40"/>&nbsp;
-      <img src="https://github.com/devicons/devicon/blob/master/icons/bash/bash-original.svg" title="Bash" alt="Bash" width="40" height="40"/>&nbsp;
-      <img src="https://github.com/devicons/devicon/blob/master/icons/flask/flask-original-wordmark.svg" alt="Flask" width="45" height="45"/>
-      <img src="https://github.com/devicons/devicon/blob/master/icons/opencv/opencv-original-wordmark.svg" alt="OpenCV" width="45" height="45"/>
-      <img src="https://github.com/devicons/devicon/blob/master/icons/html5/html5-original.svg" title="HTML5" alt="HTML5" width="40" height="40"/>&nbsp;
-      <img src="https://github.com/devicons/devicon/blob/master/icons/mysql/mysql-original-wordmark.svg" title="MySQL" alt="MySQL" width="40" height="40"/>&nbsp;
-      <img src="https://github.com/devicons/devicon/blob/master/icons/nodejs/nodejs-original-wordmark.svg" title="NodeJS" alt="NodeJS" width="40" height="40"/>&nbsp;
-      <img src="https://github.com/devicons/devicon/blob/master/icons/git/git-original-wordmark.svg" title="Git" alt="Git" width="40" height="40"/>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Usman Ali - CV</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 20px;
+            max-width: 800px;
+            margin: 0 auto;
+        }
+        .header {
+            text-align: center;
+            margin-bottom: 30px;
+        }
+        .section {
+            margin-bottom: 30px;
+        }
+        h2 {
+            color: #2c3e50;
+            border-bottom: 2px solid #2c3e50;
+            padding-bottom: 5px;
+        }
+        .experience-item, .education-item {
+            margin-bottom: 20px;
+        }
+        .date {
+            font-weight: bold;
+            color: #666;
+        }
+        ul {
+            padding-left: 20px;
+        }
+        a {
+            color: #3498db;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+    </style>
+</head>
+<body>
+    <div class="header">
+        <h1>Usman Ali</h1>
+        <p>
+            Nationality: Pakistani<br>
+            Phone: (+86) 17311375127 (Work)<br>
+            Email: usmanalipgc@gmail.com | usman_ali@std.uestc.edu.cn<br>
+            LinkedIn: <a href="https://www.linkedin.com/in/usmanali07" target="_blank">linkedin.com/in/usmanali07</a><br>
+            GitHub: <a href="https://github.com/Usmanali07" target="_blank">github.com/Usmanali07</a>
+        </p>
     </div>
-  </p>
-  
-  
+
+    <div class="section">
+        <h2>Work Experience</h2>
+        <div class="experience-item">
+            <div class="date">Aug 2022 – Oct 2024</div>
+            <h3>Python Developer - Broadstone Technologies</h3>
+            <ul>
+                <li>Designed and developed Meezy Loyalty app using PostgreSQL, Flask, and DigitalOcean APIs</li>
+                <li>Implemented AI-powered image processing with Scikit-image and OpenCV</li>
+                <li>Maintained 3D AR app "Parsl" using MongoDB and Flask Blueprint</li>
+            </ul>
+        </div>
+        
+        <div class="experience-item">
+            <div class="date">Dec 2021 – Mar 2022</div>
+            <h3>AI Intern - Ekkel.AI</h3>
+            <ul>
+                <li>Converted ML models to APIs for application integration</li>
+                <li>Developed solutions using NLP and Computer Vision</li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="section">
+        <h2>Education</h2>
+        <div class="education-item">
+            <div class="date">Aug 2024 – Current</div>
+            <h3>Master in Information and Communication Engineering</h3>
+            <p>University of Electronic Science and Technology of China</p>
+        </div>
+        
+        <div class="education-item">
+            <div class="date">Apr 2019 – Apr 2023</div>
+            <h3>Bachelor in Computer Science</h3>
+            <p>Virtual University of Pakistan - GPA: 3.60/4</p>
+        </div>
+    </div>
+
+    <div class="section">
+        <h2>Projects</h2>
+        <div class="project">
+            <h3>Online Payments Fraud Detection System</h3>
+            <div class="date">Jun 2022 – Jan 2023</div>
+            <ul>
+                <li>Developed using Random Forest Model with 13 ML model comparison</li>
+                <li>Deployed Streamlit API on Heroku</li>
+            </ul>
+            <a href="https://github.com/Usmanali07/Online-Fraud-Detection-Using-ML.git" target="_blank">View Project</a>
+        </div>
+    </div>
+
+    <div class="section">
+        <h2>Skills</h2>
+        <ul>
+            <li><strong>Programming:</strong> Python, C++, C</li>
+            <li><strong>Machine Learning:</strong> TensorFlow, Keras, Scikit-learn</li>
+            <li><strong>Databases:</strong> PostgreSQL, MongoDB</li>
+            <li><strong>Tools:</strong> Git, Docker, Linux</li>
+        </ul>
+    </div>
+
+    <div class="section">
+        <h2>Certifications</h2>
+        <ul>
+            <li>Google Data Analytics Professional Certificate</li>
+            <li>TensorFlow for AI - Coursera</li>
+            <li>Cisco Cybersecurity Essentials</li>
+        </ul>
+    </div>
+
+    <div class="section">
+        <h2>Languages</h2>
+        <ul>
+            <li>Urdu (Native)</li>
+            <li>English (B2)</li>
+        </ul>
+    </div>
+
+</body>
+</html>
