--- a/index.html
+++ b/index.html
@@ -131,13 +131,12 @@
                         <a href="#research" class="border border-primary text-primary hover:bg-blue-50 px-6 py-3 rounded-lg font-medium transition">View Research</a>
                     </div>
                 </div>
-                <div class="md:w-1/2 flex justify-center">
+				<div class="md:w-1/2 flex justify-center">
                     <div class="relative w-64 h-64 md:w-80 md:h-80 rounded-full overflow-hidden border-4 border-white shadow-xl">
-                        <!-- Replace with your actual photo path -->
-                        <div class="w-full h-full bg-gradient-to-br from-blue-400 to-purple-500 flex items-center justify-center text-white text-4xl font-bold">
-                            UA
-                        </div>
+                        <img src="src/dp.jpg" alt="Muhammad Umair" class="w-full h-full object-cover">
                     </div>
+                </div>
+           
                 </div>
             </div>
         </div>
